note controller
